--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/images/logo.png" alt="Logo" class="logo">
+                <img src="images/logo.png" alt="Logo" class="logo">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About Me</a></li>
